# CTalk

./: CMakeLists.txt
client/: CMakeLists.txt  config.h.in
client/include/: ApplicationCommon.h  ArgumentParser.h  Client.h
client/src/: ArgumentParser.c  Client.c  main.c
protocol/: CMakeLists.txt
protocol/include/: Protocol.h
protocol/src/: Protocol.c
server/: CMakeLists.txt
server/include/: ApplicationCommon.h  ArgumentParser.h  Server.h
server/src/: ArgumentParser.c  Server.c  main.c
